--- a/css/drawings.css
+++ b/css/drawings.css
@@ -1,3 +1,85 @@
+/* divtober'23 - 25 - cheesy */
+.cheesy-container {
+  background: #ffc8;  
+}
+
+.cheesy,
+.cheesy::after {
+  --cheesy-main: #fe8;
+  --cheesy-dark: #f4e47c;
+  --cheesy-darker: #ec7;
+  --extra:;
+  font-size: 1vmin;
+  width: 50em;
+  height: 55em;
+  background: 
+    var(--extra)
+    radial-gradient(farthest-side at 50% 150%, var(--cheesy-dark) 99%, #0000) 50% 0 / 28.5% 8%,
+    conic-gradient(at 50% -30%, #f000 156.75deg, var(--cheesy-dark) 0 203.25deg, #f000 0) 50% 100% / 100% 92.5%,
+    #00f0;
+  background-repeat: no-repeat;
+  border-radius: 120% 120% 100% 100% / 150% 150% 30% 34%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.cheesy::after {
+  --cheesy-dark: var(--cheesy-main);
+  --extra:
+    /* eyes */
+    radial-gradient(circle at 34.75% 67%, #fff 0 0.75%, #0000 0),
+    radial-gradient(circle at 59.75% 67%, #fff 0 0.75%, #0000 0),
+    radial-gradient(circle at 33% 68.5%, #fff 0 1.5%, #0000 0),
+    radial-gradient(circle at 58% 68.5%, #fff 0 1.5%, #0000 0),
+    radial-gradient(circle at 35% 70%, #000 4.5%, #fff 0 7%, #0000 0),
+    radial-gradient(circle at 60% 70%, #000 4.5%, #fff 0 7%, #0000 0),
+    /* cheeks */
+    radial-gradient(50% 25% at 29.5% 77%, #fccc 12%, #0000 0),
+    radial-gradient(50% 25% at 65.5% 77%, #fccc 12%, #0000 0),
+    /* mouth */
+    radial-gradient(farthest-side at 50% 0, #0000 70%, #000 0 99%, #0000) 47.5% 76% / 4em 2em,
+    /* holes */
+    radial-gradient(circle at 44% 30%, var(--cheesy-darker) 7%, #0000 0),
+    radial-gradient(circle at 54% 35%, var(--cheesy-darker) 4%, #0000 0),
+    radial-gradient(circle at 14% 82%, var(--cheesy-darker) 5.5%, #0000 0),
+    radial-gradient(circle at 72% 55%, var(--cheesy-darker) 8.5%, #0000 0),
+    radial-gradient(circle at 79% 88%, var(--cheesy-darker) 4%, #0000 0),
+    radial-gradient(circle at 86% 82%, var(--cheesy-darker) 2.5%, #0000 0),
+    ;
+  content: "";
+  position: absolute;
+  left: -6em;
+  top: 2em;
+  transform: none;
+}
+
+.cheesy::before {
+  content: "";
+  position: absolute;
+  width: 150%;
+  height: 120%;
+  left: 50%;
+  transform: translateX(-55%);
+  background: 
+    /* legs */
+    radial-gradient(50% 80% at 100% 65%, #0000 83%, #000 0 99%, #0000 0) 35% 100% / 20% 20%,
+    radial-gradient(50% 80% at 0% 69%, #0000 83%, #000 0 99%, #0000 0) 62% 100% / 20% 20%,
+    radial-gradient(80% 45% at 35.5% 101%, #000 7%, #0000 0),
+    radial-gradient(80% 45% at 62.5% 101%, #000 7%, #0000 0),
+    /* holes */
+    radial-gradient(circle at 64% 20%, var(--cheesy-darker) 2.5%, #0000 0),
+    radial-gradient(circle at 80% 60%, var(--cheesy-darker) 2.75%, #0000 0),
+    radial-gradient(circle at 77% 56%, var(--cheesy-darker) 1.75%, #0000 0),
+    /* connections */
+    linear-gradient(to bottom right, #0000 50%, var(--cheesy-dark) 0) 33.33em 0 / 7em 2.25em,
+    linear-gradient(to bottom right,  var(--cheesy-dark) 50%, #f000 0) 53em 53.05em / 7em 2.25em,
+    #f000;
+  background-repeat: no-repeat;
+  box-shadow: 0 11em 1em -10.5em #dca7
+}
+
 /* divtober'23 - 24 - feast */
 .feast-container {
   background: #f804;  
